# ctlbase

./: README.md  pyproject.toml
docs/doctrees/: config.doctree  environment.pickle  index.doctree  modules.doctree  shell.doctree
docs/html/: .buildinfo  config.html  genindex.html  index.html  message.html  mode.html  modules.html  objects.inv  process.html  py-modindex.html  search.html  searchindex.js  shell.html
docsource/: conf.py  config.rst  index.rst  message.rst  mode.rst  modules.rst  process.rst  shell.rst
template/etc/: bashconfig
templates/locales/de/: translation.json
